# ABProcessor

./: .gitignore  ABProcessor.csproj  ABProcessor.sln  LICENSE  README.md
.github/workflows/: c-cpp.yml
samples/: ABProcessorNativeSample.cs  ABProcessorNativeSample.csproj  ABProcessorSample.cs  ABProcessorSample.csproj
src/: ABProcessor.cs  ABProcessorNative.cs
src/Native/: ABProcessorNative.cpp  ABProcessorNative.sln  ABProcessorNative.vcxproj  CMakeLists.txt
src/Native/src/: ABProcessorNative.cpp
